Rearrange HTDateFormat, option LocalSaison renamed to LocalSeason.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5879 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TransferListSearchFilters.desc=Дадае магчымасць выка
 foxtrick.TransferSearchResultFilters.desc=Additional filters for filtering transfer search results
 foxtrick.TransferDeadline.desc=Дадае дадатковы радок да кожнага выніку пошуку трансфэраў, які змяшчае колькасць дзён, гадзін і хвілін да дэдлайну
 foxtrick.HTDateFormat.desc=Дадае глабальныя / лакальныя тыдзень і сэзон да важных дат на старонках HT
-foxtrick.HTDateFormat.LocalSaison.desc=Паказвае нумар лакальнага сэзону (сэзону ў краіне) замест глабальнага
+foxtrick.HTDateFormat.LocalSeason.desc=Паказвае нумар лакальнага сэзону (сэзону ў краіне) замест глабальнага
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Калі ласка, увядзіце зрушэнне дня ад панядзелка, з якога пачынаецца тыдзень (0 = панядзелак [па змоўчванні], -2 = субота)
 foxtrick.TeamPopupLinks.desc=Паказвае ўсплываючае вакенца са спасылкамі пры навядзенні курсору на назву клуба
 foxtrick.StaffMarker.desc=Пазначаць імёны афіцыйных асобаў гульні на форуму і на старонках камандаў. У тэкставым радку Вы можаце вызначыць уласны стыль для падсветкі (HTML-атрыбут style).
