--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TransferSearchFilters.desc=Omogućava šablone na filterima transfer li
 foxtrick.TransferSearchResultFilters.desc=Dodatni filteri za rezultate pretrage transfera
 foxtrick.TransferDeadline.desc=Ubacuje dodatnu liniju kod svakog rezultata pretrage transfera, s danima, satima i minutima preostalim do isteka roka za kupovinu
 foxtrick.HTDateFormat.desc=Ubacuje globalnu/lokalnu HT sedmicu i sezonu u značajne datume na stranicama Hattricka
-foxtrick.HTDateFormat.LocalSaison.desc=Prikaži lokalnu sezonu umjesto globalne
+foxtrick.HTDateFormat.LocalSeason.desc=Prikaži lokalnu sezonu umjesto globalne
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Podesite sami dan kojim želite da započinje nova sedmica (0 = ponedjeljak(standardno), -2 = subota)
 foxtrick.TeamPopupLinks.desc=Prikazuje mali prozorčić kada pređete preko linka neke ekipe
 foxtrick.TeamPopupLinksMore.desc=Prikazuje link 'više...' u tim popup meniju koji otkriva 'dodatne' prečice.
