--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -53,7 +53,7 @@ foxtrick.TransferSearchFilters.desc=Umožňuje použití filtrů pro vyhledává
 foxtrick.TransferSearchResultFilters.desc=Umožňuje použití dodatečného filtrování výsledků vyhledávání na přestupové listině
 foxtrick.TransferDeadline.desc=Ke každému výsledku vyhledávání na přestupové listině přidává dny, hodiny a minuty zbývající do uzávěrky
 foxtrick.HTDateFormat.desc=K důležitým datům uvádí i globální/národní číslo sezóny a týdnu Hattricku
-foxtrick.HTDateFormat.LocalSaison.desc=Místo globálního čísla sezóny zobrazovat číslo sezóny příslušné země
+foxtrick.HTDateFormat.LocalSeason.desc=Místo globálního čísla sezóny zobrazovat číslo sezóny příslušné země
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Pro zobrazení prvního dne týdne využít vlastní nastavení (0 = pondělí/implicitní, -2 = sobota)
 foxtrick.TeamPopupLinks.desc=Při najetí na odkaz na tým zobrazuje malé plovoucí okno s odkazy
 foxtrick.TeamPopupLinksMore.desc=V plovoucím okně s odkazy zobrazuje položku 'více...', která obsahuje několik dalších odkazů
