--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -53,7 +53,7 @@ foxtrick.TransferSearchFilters.desc=Ermöglicht die Nutzung von Filtern in der T
 foxtrick.TransferSearchResultFilters.desc=Zusätzliche Optionen zum Filtern der Ergebnisse der Transfermarktsuche
 foxtrick.TransferDeadline.desc=Hinzufügen der Zeit in Tagen, Stunden und Minuten zum Verkaufszeitpunkt in der Ergebnisliste der Transfersuche
 foxtrick.HTDateFormat.desc=Anzeige der globalen HT-Woche und Saison neben dem Datum auf den wichtigsten Seiten.
-foxtrick.HTDateFormat.LocalSaison.desc=Anzeige der lokalen Saison anstelle der globalen
+foxtrick.HTDateFormat.LocalSeason.desc=Anzeige der lokalen Saison anstelle der globalen
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Einen anderen Tag als Wochenanfang einstellen (0 = Montag, -2 = Samstag)
 foxtrick.TeamPopupLinks.desc=Anzeige eines kleinen Popups über den Teamnamen mit Direktlinks
 foxtrick.TeamPopupLinksMore.desc=Zeigt in dem Popups einen 'Mehr...' Link an, der weitere Links im Popup anzeigt
