--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TransferSearchFilters.desc=Permite el uso de filtros de búsqueda dentr
 foxtrick.TransferSearchResultFilters.desc=Filtros adicionales para ordenar los resultado de búsqueda, en la Lista de Transferencias.
 foxtrick.TransferDeadline.desc=Añade una línea extra dentro de cada resultado de búsqueda, en la Lista de Transferencias; con días, horas y minutos faltantes para que se termine la subasta.
 foxtrick.HTDateFormat.desc=Añade las fechas más importantes de la semana y temporada global / localemente dentro de las páginas de HT
-foxtrick.HTDateFormat.LocalSaison.desc=Muestra la temporada local en lugar de la temporada global
+foxtrick.HTDateFormat.LocalSeason.desc=Muestra la temporada local en lugar de la temporada global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Usar una configuración personal, fijando el primer día de la semana (0 = lunes/predeterminado, -2 = sábado)
 foxtrick.TeamPopupLinks.desc=Muestra una pequeña ventana emergente con atajos, cuando se situa el cursor por encima del enlace a un equipo
 foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo.
