--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TransferSearchFilters.desc=استفاده از الگو در هنگام
 foxtrick.TransferSearchResultFilters.desc=فيلترهاي بيشتر براي فيلتر کردن نتيجه جستجو در صفحه نقل و انتقالات
 foxtrick.TransferDeadline.desc=زمان اتمام مزايده را بر حسب روز , ساعت , دقيقه به نتيجه هاي جستجو بازيکن اضافه کن
 foxtrick.HTDateFormat.desc=اضافه کردن محلي/جهاني هفته ها و فصل هاي هتريک به مهمترين روزها در صفحه هاي هتريک
-foxtrick.HTDateFormat.LocalSaison.desc=نمایش فصل (محلي) به جاي فصل (جهاني)
+foxtrick.HTDateFormat.LocalSeason.desc=نمایش فصل (محلي) به جاي فصل (جهاني)
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=روز ديگري را به عنوان اول هفته انتخاب کنيد (0 = دوشنبه/پيش فرض, -2 = شنبه)
 foxtrick.TeamPopupLinks.desc=نمایش يک صفحه کوچک همراه با لينک وقتي که موس را روي نام کاربري قرار ميدهيد
 foxtrick.StaffMarker.desc=علامت گذاری کارمندان در انجمنها و صفحه تیمشان.
