--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -56,7 +56,7 @@ foxtrick.FlagCollectionToMap.desc=Montre une carte du monde avec tous les pays d
 foxtrick.TransferSearchFilters.desc=Permet l'utilisation de modèles de recherche dans la liste des transferts (filtres).
 foxtrick.TransferDeadline.desc=Ajoute l'échéance des transferts exprimée en jours, heures et minutes.
 foxtrick.HTDateFormat.desc=Ajoute le format de date HT (semaine et saison) à la plupart des dates.
-foxtrick.HTDateFormat.LocalSaison.desc=Affiche la saison Nationnale au lieu de la saison Mondiale.
+foxtrick.HTDateFormat.LocalSeason.desc=Affiche la saison Nationnale au lieu de la saison Mondiale.
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Change le premier jour de la semaine (0 = lundi, -2 = samedi).
 foxtrick.TeamPopupLinks.desc=Affiche une fenêtre avec les raccourcis sélectionnés lorsque vous survolez le lien d'une équipe et/ou d'un utilisateur.
 foxtrick.TeamPopupLinksMore.desc=Ajoute l'option 'plus...' à la fenêtre de raccourcis pour afficher les raccourcis supplémentaires sélectionnés.
