--- a/content/locale/fy/foxtrick.properties
+++ b/content/locale/fy/foxtrick.properties
@@ -25,7 +25,7 @@ foxtrick.FlagCollectionToMap.desc=					Toant per kategory in wrâldkaart mei all
 foxtrick.TransferSearchFilters.desc=			Soarget foar speurfiltertemplates by de oerstaplist
 foxtrick.TransferDeadline.desc=					Foeget in ekstra rigel ta oan speurresultaten op de oerstapmerk, mei dagen, oeren en minuten oant oerstapdeadline
 foxtrick.HTDateFormat.desc=							Foeget de HT-wike en seizoen fan de spulwrâld ta oan de belangrykste HT-datums op de side
-foxtrick.HTDateFormat.LocalSaison.desc=				Toant lokale seizoen ynstee fan spulwrâld-seizoen
+foxtrick.HTDateFormat.LocalSeason.desc=				Toant lokale seizoen ynstee fan spulwrâld-seizoen
 foxtrick.TeamPopupLinks.desc=						Toant in lyts popupskermke mei snelkoppelings atst mei de mûs oer in koppeling mei ploechid giest
 foxtrick.TeamPopupLinksMore.desc=					Toant in 'mear...'-koppeling yn it popupskermke mei snelkoppelings, dy't ferfolgens mear koppelings toant.
 foxtrick.StaffMarker.desc=						Markeart aliassen fan officials op de foarums. Yn de tekstfakken kinst in eigen styl (HTML stylattribuut) oanmeitsje.
