--- a/content/locale/gr/foxtrick.properties
+++ b/content/locale/gr/foxtrick.properties
@@ -25,7 +25,7 @@ foxtrick.FlagCollectionToMap.desc=Εμφανίζει χάρτη με όλες τ
 foxtrick.TransferSearchFilters.desc=Επιτρέπει στις μεταγραφές δημιουργία πρότυπων φίλτρων αναζήτησης
 foxtrick.TeamPopupLinks.desc=Εμφανίζει ένα μικρό πλαίσιο με συνδέσμους όταν περνάτε πάνω από σύνδεσμο ομάδας.
 foxtrick.HTDateFormat.desc=Προσθέτει την εβδομάδα και περίοδο του HT στις σημαντικότερες ημερομηνίες στις σελίδες του HT
-foxtrick.HTDateFormat.LocalSaison.desc=Εμφανίζει την τοπική περίοδο αντί για την γενική περίοδο.
+foxtrick.HTDateFormat.LocalSeason.desc=Εμφανίζει την τοπική περίοδο αντί για την γενική περίοδο.
 foxtrick.TransferDeadline.desc=Προσθέτει μία γραμμή σε κάθε αποτέλεσμα αναζήτησης στις μεταγραφές με ημέρες, ώρες και λεπτά μέχρι τη λήξη της μεταγραφής
 foxtrick.StaffMarker.desc=Mαρκάρει επίσημα ψευδώνυμα στις διασκέψεις.Στα κουτιά κειμένου μπορεί να οριστεί ένα προσωπικό στυλ (ιδιότητες HTML)
 foxtrick.ForumYouthIcons.desc=Εμφανίζει μπάρα συνδέσμων για την ακαδημία νέων (επίσης λειτουργεί και στο ταχυδρομείο)
