--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -54,7 +54,7 @@ foxtrick.FlagCollectionToMap.desc=Prikazati kartu svijeta sa svim državama čij
 foxtrick.TransferSearchFilters.desc=Omogućiti predloške s filterima za pretragu na transfer listi
 foxtrick.TransferDeadline.desc=Ubaciti dodatnu liniju za svaki rezultat pretrage na transfer listi s prikazom dana, sati i minuta do isteka roka za kupovinu
 foxtrick.HTDateFormat.desc=Prikaz broja tjedna i sezone (na globalnoj/lokalnoj razini) uz najvažnije datume na stranicama Hattricka
-foxtrick.HTDateFormat.LocalSaison.desc=Prikazati broj sezone na lokalnoj razini umjesto na globalnoj
+foxtrick.HTDateFormat.LocalSeason.desc=Prikazati broj sezone na lokalnoj razini umjesto na globalnoj
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Namjestiti prvi dan u tjednu po izboru (0 = ponedjeljak/uobičajeno, -2 = subota)
 foxtrick.TeamPopupLinks.desc=Prikazati okvir s prečicama prilikom prelaska preko linka momčadi
 foxtrick.TeamPopupLinksMore.desc=Prikazati link 'više...' u okviru s prečicama koji otkriva više prečica.
