--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -52,7 +52,7 @@ foxtrick.FlagCollectionToMap.desc=Megjelenít egy világatlaszt az általad az e
 foxtrick.TransferSearchFilters.desc=A segítségével a játékospiacon használható szűrősablonokat hozhatsz létre
 foxtrick.TransferDeadline.desc=Beszúr egy plusz sort az egyes találatok mögé a Játékospiacon, amely a lejárati időpontig hátralévő napo(ka)t, órá(ka)t és perc(ek)et mutatja
 foxtrick.HTDateFormat.desc=Megjeleníti a globális/helyi hét és szezon számát a HT-s oldalakon látható legfontosabb dátumok mellett
-foxtrick.HTDateFormat.LocalSaison.desc=A globális szezon helyett az adott országban érvényes szezon számát jeleníti meg
+foxtrick.HTDateFormat.LocalSeason.desc=A globális szezon helyett az adott országban érvényes szezon számát jeleníti meg
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Egyedi eltolási értéket használ, amellyel beállíthatod a hét első napját (0 = hétfő/alapértelmezett, -2 = vasárnap)
 foxtrick.TeamPopupLinks.desc=Megjelenít egy gyorshivatkozásokat tartalmazó ablakot, amikor a kurzort egy csapatazonosító fölé viszed
 foxtrick.TeamPopupLinksMore.desc=Megjelenít egy „több információ…” feliratú hivatkozást a gyorshivatkozások mezőben. Így további lehetőségek jelennek meg.
