--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -28,7 +28,7 @@ foxtrick.FlagCollectionToMap.desc=Rodo pasaulio žemėlapį su visomis šalimis,
 foxtrick.TransferSearchFilters.desc=Leidžia sukurti prekybos paiešos šablonus
 foxtrick.TransferDeadline.desc=Prideda naują eilutę prie kiekvieno parduodamo žaidėjo paieškos rezultatuose su dienomis, valandomis ir minutėmis iki žaidėjo pardavimo pabaigos
 foxtrick.HTDateFormat.desc=Prideda HT savaitės ir sezono informaciją prie svarbiausių datų
-foxtrick.HTDateFormat.LocalSaison.desc=Rodo šalies, o ne pasaulinį sezoną
+foxtrick.HTDateFormat.LocalSeason.desc=Rodo šalies, o ne pasaulinį sezoną
 foxtrick.TeamPopupLinks.desc=Rodo mažą lentelę su pagrindinėmis nuorodomis, jei pelės užvesta ant komandos nuorodos
 foxtrick.TeamPopupLinksMore.desc=Rodo nurodą 'daugiau...' iššokančioje lentelėje, kurią paspaudę galite rasti daugiau nuorodų
 foxtrick.StaffMarker.desc=Kita spalva išskiria Hattrick darbuotojų vardus forume. Žemiau galite nurodyti savo norimą stilių (HTML stiliaus požymiai).
