--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -53,7 +53,7 @@ foxtrick.FlagCollectionToMap.desc=Jurik mappa tad-dinja bil-pajjiżi kollha u bi
 foxtrick.TransferSearchFilters.desc=Iħallik tagħmel templates b'filtri ta' tfittxija għat-trasferimenti
 foxtrick.TransferDeadline.desc=Iżid linja żejda għal kull riżultat ta' tfittxija li tagħmel fis-suq tat-trasferimenti li jurik il-granet, is-siegħat u l-minuti li fadal biex jagħlaq it-trasferiment
 foxtrick.HTDateFormat.desc=Iżid il-ġimgħa u l-istaġun globali/lokali ta' HT għall-aktar dati importanti fuq il-paġni ta' HT
-foxtrick.HTDateFormat.LocalSaison.desc=Juri l-istaġun lokali minflok l-istaġun globali
+foxtrick.HTDateFormat.LocalSeason.desc=Juri l-istaġun lokali minflok l-istaġun globali
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Juża numru bħala indikazzjoni tal-ewwel ġurnata tal-ġimgħa (0 = it-Tnejn/default, -2 = is-Sibt)
 foxtrick.TeamPopupLinks.desc=Itella' tieqa żgħira b'links ta' malajr meta tmexxi l-cursor fuq l-link bl-id tat-tim
 foxtrick.TeamPopupLinksMore.desc=Jurik link 'aktar...' fuq il-links tat-tim biex tkun tista' ssegwi aktar shortcuts.
