--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -52,7 +52,7 @@ foxtrick.FlagCollectionToMap.desc=Toon een kaartoverzicht van alle landen waar j
 foxtrick.TransferSearchFilters.desc=Bied de mogelijkheid om zoeksjablonen voor de transferlijst te gebruiken
 foxtrick.TransferDeadline.desc=Toon een extra regel bij ieder zoekresultaat op de transfertmarkt, met daarin dagen, uren en minuten tot transfer deadline
 foxtrick.HTDateFormat.desc=Toon de Global HT / lokale week en seizoen bij de belangrijkste datums op Hattrick pagina's
-foxtrick.HTDateFormat.LocalSaison.desc=Toon lokale seizoen in plaats van het seizoen op Global HT
+foxtrick.HTDateFormat.LocalSeason.desc=Toon lokale seizoen in plaats van het seizoen op Global HT
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Gebruik een aangepaste eerste dag van de week (0 = maandag (standaard), -2 = zaterdag, etc.)
 foxtrick.TeamPopupLinks.desc=Toon een klein pop-up venster met snelkoppelingen als je je muis op een team ID link plaatst
 foxtrick.TeamPopupLinksMore.desc=Toon een 'meer...' link in de team popup links, die meer links toont
