--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TransferSearchFilters.desc=Tillet malar i overgangssøk
 foxtrick.TransferSearchResultFilters.desc=Tilleggsfilter for filtrering av overgangssøk
 foxtrick.TransferDeadline.desc=Legg til ei ekstra linje til kvart søkeresultat på overgangsmarkedet med dagar, timar og minutt til fristen går ut
 foxtrick.HTDateFormat.desc=Legg til global/lokal HT veke og sesong til viktigaste datoar på HT sidene
-foxtrick.HTDateFormat.LocalSaison.desc=Syn lokal sesong istaden for global sesong
+foxtrick.HTDateFormat.LocalSeason.desc=Syn lokal sesong istaden for global sesong
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Bruk eigenvalt offset til å  stille inn den første dagen i veka di (0 = måndag/standard, -2 = laurdag)
 foxtrick.TeamPopupLinks.desc=Syn eit lite sprett-opp vindauge med snøgge linkar når du held musa over ei laglenkje
 foxtrick.TeamPopupLinksMore.desc=Syn ei 'meir…' lenkje i lag-sprett-opp-lenkjene som avdekkjer følgjande snarvegar
