--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -28,7 +28,7 @@ foxtrick.FlagCollectionToMap.desc=Vis et verdenskart med alle landene som du har
 foxtrick.TransferSearchFilters.desc=Tillat maler for overgangssøk
 foxtrick.TransferDeadline.desc=Legg til en ekstra linje på hvert søkeresultat i overgangsmarkedet med dager, timer og minutter til budfristen er over
 foxtrick.HTDateFormat.desc=Legg til den globale HT-uken og sesongen til de viktigste datoene på HT-siden
-foxtrick.HTDateFormat.LocalSaison.desc=Vis den lokale sesongen istedet for den globale sesongen
+foxtrick.HTDateFormat.LocalSeason.desc=Vis den lokale sesongen istedet for den globale sesongen
 foxtrick.TeamPopupLinks.desc=Vis et lite pop-up vindu med hurtiglenker når du sveiper over en lag-id-link
 foxtrick.TeamPopupLinksMore.desc=Viser en 'mer..' link i lagpopuplenker, i boksen som viser de resterende 'mer' snarveiene.
 foxtrick.StaffMarker.desc=Merk de overordnedes nick på forumene. I tekstboksene kan du velge ditt egne tekstformat (HTML tekstformat kjennetegn)  (HTML style attribute).
