--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -53,7 +53,7 @@ foxtrick.TransferSearchFilters.desc=Dodaje filtry wyszukiwania na liście transf
 foxtrick.TransferSearchResultFilters.desc=Pozwala na dodatkowe filtrowanie wyników na liście transferowej i prezentowanie ich w formie tabeli umiejętności
 foxtrick.TransferDeadline.desc=Pokazuje czas pozostały do końca licytacji przy wynikach wyszukiwania zawodników wystawionych na sprzedaż
 foxtrick.HTDateFormat.desc=Pokazuje tydzień oraz (globalny/lokalny) sezon Hattricka przy datach np. meczów, transferów itp.
-foxtrick.HTDateFormat.LocalSaison.desc=Pokazuje numer sezonu lokalnego (krajowego) zamiast globalnego
+foxtrick.HTDateFormat.LocalSeason.desc=Pokazuje numer sezonu lokalnego (krajowego) zamiast globalnego
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Zdefiniuj pierwszy dzień tygodnia sam (0 = poniedziałek, -2 = niedziela)
 foxtrick.TeamPopupLinks.desc=Wyświetla małe okienko pop-up z szybkimi odnośnikami, gdy kursor myszki znajdzie się na nazwie zespołu
 foxtrick.TeamPopupLinksMore.desc=Pokazuje link 'Więcej' przy popup-ie TeamPopupLinks
