--- a/content/locale/pt_BR/foxtrick.properties
+++ b/content/locale/pt_BR/foxtrick.properties
@@ -28,7 +28,7 @@ foxtrick.FlagCollectionToMap.desc=Mostra, para cada categoria, um mapa com todos
 foxtrick.TransferSearchFilters.desc=Permite filtros de procura na pagina de transferencias
 foxtrick.TransferDeadline.desc=Adicionar uma linha extra para cada resultado da busca no mercado de transferencia com dias, horas e minutos até o final da tranferencia
 foxtrick.HTDateFormat.desc=Adicionar HT global semana e temporada nas mais importantes datas nas paginas do HT
-foxtrick.HTDateFormat.LocalSaison.desc=Display local season instead of global season
+foxtrick.HTDateFormat.LocalSeason.desc=Display local season instead of global season
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday, -2 = saturday)
 foxtrick.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com varios links quando passar o cursor por cima de um link para uma equipa
 foxtrick.TeamPopupLinksMore.desc=Shows a 'more...' link in team popup links box which reveals following 'more' shortcuts.
