--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -33,7 +33,7 @@ foxtrick.FlagCollectionToMap.desc=Tregon hartën botërore me flamurë të shtet
 foxtrick.TransferSearchFilters.desc=Lejon shëmbuj standart me filtra përkatës te kërkimi i transfertave
 foxtrick.TransferDeadline.desc=Shton një rrjesht tjetër te rezultatet e kërkimit të transfertave ku tregohet dita, orët dhe minutat e mbetura nga përfundimi i shitjes
 foxtrick.HTDateFormat.desc=Shton javën dhe sezonin global të HT dhe datat më të rëndësishme te faqet e HT
-foxtrick.HTDateFormat.LocalSaison.desc=Tregon sezonin lokal në vënd të sezonit global
+foxtrick.HTDateFormat.LocalSeason.desc=Tregon sezonin lokal në vënd të sezonit global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Përdor vlerat tuaja për të treguar ditën e parë të javës (0 = e hënë, -2 = e shtunë)
 foxtrick.TeamPopupLinks.desc=Tregon një dritare të vogël me link të shpejtë kur ju kaloni kursorin te emri i ekipit
 foxtrick.TeamPopupLinksMore.desc=Tregon një dritare me më shumë link që tregon dhe këto link më tepër
