--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -73,7 +73,7 @@ foxtrick.TransferSearchFilters.desc=Aktiverar transfersökningsmallar
 
 foxtrick.TransferDeadline.desc=Lägger till en extra rad till varje sökresultat på transfersidan med dagar, timmar och minuter till deadline.
 foxtrick.HTDateFormat.desc=Lägger till vecka och säsong till de viktigaste datumen på Hattricksidor
-foxtrick.HTDateFormat.LocalSaison.desc=Visa lokal säsong istället för global säsong
+foxtrick.HTDateFormat.LocalSeason.desc=Visa lokal säsong istället för global säsong
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Sätt första dag i veckan (0=måndag/default, -2=lördag)
 
 
