--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -61,7 +61,7 @@ foxtrick.TransferSearchFilters.desc=转会搜索条件的模板
 foxtrick.TransferSearchResultFilters.desc=额外的转会搜索条件
 foxtrick.TransferDeadline.desc=在转会截止期限旁边添加剩余时间
 foxtrick.HTDateFormat.desc=在 Hattrick 页面中最重要的日期旁添加全球/本国的赛季与周次
-foxtrick.HTDateFormat.LocalSaison.desc=显示本国赛季以替代全球赛季
+foxtrick.HTDateFormat.LocalSeason.desc=显示本国赛季以替代全球赛季
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=自定义每周从哪一天开始 (0 = 周一/默认, -2 = 周六)
 foxtrick.TeamPopupLinks.desc=当悬停在一个球队的链接上时弹出一个快速链接的列表
 foxtrick.StaffMarker.desc=在论坛以及球队页面高亮官方工作人员的用户名.
