--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -28,7 +28,7 @@ foxtrick.FlagCollectionToMap.desc=Mostra, para cada categoria, um mapa com todos
 foxtrick.TransferSearchFilters.desc=Permite filtros de procura na página de transferêcias
 foxtrick.TransferDeadline.desc=Adiciona uma linha extra para os resultados no mercado de transferências com os dias, horas e minutos que faltam para o prazo acabar.
 foxtrick.HTDateFormat.desc=Adiciona a semana e época golobal do HT nas datas mais importantes das páginas do HT.
-foxtrick.HTDateFormat.LocalSaison.desc=Mostrar o número de época local em vez de global.
+foxtrick.HTDateFormat.LocalSeason.desc=Mostrar o número de época local em vez de global.
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday, -2 = saturday)
 foxtrick.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com vários links aquando da passagem do cursor por cima de um link para uma equipa
 foxtrick.TeamPopupLinksMore.desc=Mostra um link 'mais...' nos links da caixa de popup da equipa que mostra os seguintes 'mais...' atalhos.
