--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -56,7 +56,7 @@ foxtrick.TransferSearchFilters.desc=Permite adaugarea unor sabloane cu filtre de
 foxtrick.TransferSearchResultFilters.desc=Filtre aditionale pentru filtrarea rezultatelor listei de transferuri
 foxtrick.TransferDeadline.desc=Adauga o linie suplimentara pentru fiecare jucator de pe lista de transferuri cu zile, ore si minute pana cand se termina licitatia
 foxtrick.HTDateFormat.desc=Adauga saptamana si sezonul la nivel global/local la cele mai importante date privind paginile HT
-foxtrick.HTDateFormat.LocalSaison.desc=Afiseaza sezonul local in locul sezonului global
+foxtrick.HTDateFormat.LocalSeason.desc=Afiseaza sezonul local in locul sezonului global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru a seta prima zi a saptamanii (0 = luni, -2 = sambata)
 foxtrick.TeamPopupLinks.desc=Afiseaza o mica fereastra pop-up cu linkuri cand tii cursorul peste un link teamid
 foxtrick.TeamPopupLinksMore.desc=Afiseaza un link 'mai multe...' in fereastra pop-up scurtaturi echipa care afiseaza la randul ei mai multe scurtaturi.
