Russian locale fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5893 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -333,7 +333,7 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc='Белый список
 foxtrick.TableSort.desc=Сделать возможным сортировку таблиц, содержащих заголовок, по столбцам (в т.ч. таблиц в форуме)
 foxtrick.LiveAlert.desc=Уведомление о голах в HT Live
 foxtrick.OldStyleFace.desc=Показывать лица в старом стиле Hattrick
-foxtrick.NtPeek.desc=Прятать матчи сборных в Моём Hattrick'е
+foxtrick.NtPeek.desc=Показывать матчи сборных в Моём Hattrick'е
 
 # -----------------------------------------------------------------------------
 
