fi locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5920 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -170,7 +170,7 @@ foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Näytä linkit vain muiden jouk
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Näytä linkit kaikilla sivuilla, mukaanlukien oman joukkueeni sivulla
 foxtrick.ExtendedPlayerDetails.desc=Esittää jotain hyödyllistä tietoa pelaajan henkilötieto-sivulla (liittyen pelaajan joukkueessa olon pituuteen)
 foxtrick.ExtendedPlayerDetailsWage.desc=Optiot, jotka näyttää palkan ilman bonusta ja/tai vuosipalkan
-foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Ruksittamatta esittää palkan ilman bonusta
+foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Esittää palkan ilman bonusta
 foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Näytä pelaajan vuosittainen palkka
 foxtrick.FixcssProblems.desc=Korjaa vialla olevia HT CSS-tyylien ongelmia.
 foxtrick.FixcssProblems.Forum_Hover_Links.desc=Korjaa valkoisiksi muuttuvien linkkien ongelman hiirenalta Foorumissa
@@ -183,7 +183,7 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Korjaa yhden HT virheen oikealta-vasemmal
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Lisää korjattu vierityspalkki foorumiin. Vähemmän häilyvä.
 foxtrick.FixcssProblems.Forum_ThreadlistSpace.desc=Lisää tilaa puulistalle foorumissa.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Korjaa pieni fonttikoko yleisillä sivuilla normaalilla fonttikoolla.
-foxtrick.FixcssProblems.BrasilToolbarFix.desc=Remove UOL toolbar (for Brasilian users)
+foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Poista 'Forum sneak-peek' kaikilta sivuilta.
 foxtrick.SimplePresentation.desc=Valinnaiset esitys -optiot
 foxtrick.SimplePresentation.League_Table.desc=Lisää pystysuorat rivit sarjapöytiin, helpompi lukea.
 foxtrick.SimplePresentation.Guestbook.desc=Kasvattaa luettavuutta vieraskirjassa (sisentää viestin harmaalla taustavärillä)
@@ -292,7 +292,9 @@ foxtrick.ForumThreadAutoIgnore.desc=Ignoroi automaattisesti foorumitopicit valit
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tageista, eg: NT, idea, Bug. Pilkku eristetty, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
-foxtrick.LiveAlert.desc=Alert HT Live goals
+foxtrick.LiveAlert.desc=Hälytä HT Live -maalit
+foxtrick.OldStyleFace.desc=Näytä pelaajien kasvot vanhassa tyylissä
+foxtrick.NtPeek.desc=Kurkista MJ/U20 otteluihin Hattrickin etusivulla
 
 # IN-GAME STRINGS. translate first
 
@@ -606,6 +608,12 @@ foxtrick.defensiveTrainer=%s valmentaja, joka on kiinnostunut puolustavasta peli
 foxtrick.offensiveTrainer=%s valmentaja, joka on kiintynyt hyökkäävään pelityyliin
 foxtrick.balancedTrainer=%s valmentaja, joka ei ole hyökkäys- eikä puolustusmielinen
 
+ntpeek.title=Viimeisimmät maaottelut
+matches.nt=MJ Ottelut
+matches.u20=U20 Ottelut
+
+htLive=HT Live
+
 foxtrick.onpagepreferences=FoxTrick OnPagePrefs
 foxtrick.modules_allpages=Kaikki moduulit
 HTLanguageChanged=Olet asettanut Foxtrick-kielen automaattisen mukautumisen Foxtrickin pääasetuksissa. Paikallinen Foxtrick-kielesi on nyt: %s.
@@ -876,6 +884,8 @@ foxtrick.prefs.stagepref=Estä Foxtrick Stage-serverillä
 foxtrick.prefs.disableTemporaryLabel=Estä Foxtrick väliaikaisesti
 foxtrick.prefs.saved=Asetukset tallennettu!
 
+foxtrick.showReleaseNotes=Näytä julkaisutiedot Foxtrickin päivityksen jälkeen
+
 foxtrick.prefs.buttonSave=Tallenna
 foxtrick.prefs.buttonCancel=Peruuta
 foxtrick.prefs.buttonExample=Resetoi
@@ -885,6 +895,8 @@ foxtrick.prefs.buttonDisableAll=Hylkää kaikki
 foxtrick.prefs.buttonSavePrefs=Tallenna
 foxtrick.prefs.buttonLoadPrefs=Lataa
 foxtrick.prefs.activeCurrencyConverter=Salli valuuttamuunnin
+
+foxtrick.versionReleaseNotes=Show release notes for:
 
 about.headDevelopers=Pääkehittäjät
 about.projectOwners=Projektin omistajat
