Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5927 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -18,6 +18,7 @@ foxtrick.ForumTemplates.desc=Permite transformarea posturilor din forumuri in sa
 foxtrick.ForumTemplates.DefaultShow.desc=Afiseaza sau ascunde sabloanele proprii
 foxtrick.ForumTemplates.CustomWidth.desc=Utilizati latime personalizata pentru afisarea numelui sabloanelor (implicit 125(px))
 foxtrick.ForumPreview.desc=Permite afisarea unui post de previzualizare (functioneaza si pentru mailuri)
+foxtrick.HideManagerAvatar.desc=Ascunde avatarul de pe forum, dar nu si linkurile catre serie si user
 foxtrick.AddLeaveConfButton.desc=Adauga un buton 'Paraseste forumul' pentru fiecare fiecare forum in parte
 foxtrick.StarsCounter.desc=Adauga numarul total de stele la pagina cu asezarea echipei
 foxtrick.MoveLinks.desc=Muta linkurile seriei si steagul la antetul mesajului. Nota: Functia din Hattrick 'Arata avatar si info' trebuie sa fie activata ca aceasta sa functioneze!
@@ -56,7 +57,7 @@ foxtrick.TransferSearchFilters.desc=Permite adaugarea unor sabloane cu filtre de
 foxtrick.TransferSearchResultFilters.desc=Filtre aditionale pentru filtrarea rezultatelor listei de transferuri
 foxtrick.TransferDeadline.desc=Adauga o linie suplimentara pentru fiecare jucator de pe lista de transferuri cu zile, ore si minute pana cand se termina licitatia
 foxtrick.HTDateFormat.desc=Adauga saptamana si sezonul la nivel global/local la cele mai importante date privind paginile HT
-foxtrick.HTDateFormat.LocalSeason.desc=Afiseaza sezonul local in locul sezonului global
+foxtrick.HTDateFormat.LocalSaison.desc=Afiseaza sezonul local in locul sezonului global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru a seta prima zi a saptamanii (0 = luni, -2 = sambata)
 foxtrick.TeamPopupLinks.desc=Afiseaza o mica fereastra pop-up cu linkuri cand tii cursorul peste un link teamid
 foxtrick.TeamPopupLinksMore.desc=Afiseaza un link 'mai multe...' in fereastra pop-up scurtaturi echipa care afiseaza la randul ei mai multe scurtaturi.
@@ -136,6 +137,7 @@ foxtrick.ConfirmActions.Bid.desc=Licitarea pe un jucator
 foxtrick.ConfirmActions.TransferList.desc=Plasarea unui jucator pe lista de transferuri
 foxtrick.ConfirmActions.NtChange.desc=Adaugarea/scoaterea unui jucatori la/din echipa nationala
 foxtrick.ConfirmActions.StaffChange.desc=Angajarea/concedierea staffului
+foxtrick.HideManagerAvatarUserInfo.desc=Ascunde informatiile userului de sub avatarul de pe forum
 foxtrick.PersonalityImages.desc=Adauga numere colorate pentru simpatie, cinste si agresivitate pe pagina detaliata a unui jucator
 foxtrick.HideSignatures.desc=Ascunde semnaturile in forumuri, afiseaza in schimb un link 'Semnatura'
 foxtrick.MarkUnread.desc=Adauga un link pentru a marca toatea mesajele necitite de la threadul actual.
@@ -149,6 +151,7 @@ foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Colorare separata a propri
 foxtrick.ForumRedirManagerToTeam.desc=Redirectioneaza link-ul de la pagina managerului la pagina echipei in forumuri
 foxtrick.AddManagerButtons.desc=Adauga sau schimba butoanele pe pagina managerului sau pagina echipei
 foxtrick.ManagerButtons.GuestBook.desc=Adauga butoanele 'Scrie in cartea de oaspeti' pe pagina managerului si pagina echipei
+foxtrick.ManagerButtons.LargeSendMail.desc=Deschide casuta de mesaje mare in locul celei mici
 foxtrick.HTThreadMarker.desc=Marcheaza subiectele create de HT-i
 foxtrick.TeamStats.desc=Creaza o imagine de ansamblu a jucatorilor echipei.
 foxtrick.TeamStats.General.desc=Informatii generale (ITC/varsta)
@@ -657,15 +660,27 @@ foxtrick.defensiveTrainer=Un antrenor %s care este adept al apararii.
 foxtrick.offensiveTrainer=Un antrenor %s care este adept al atacului.
 foxtrick.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nici al apararii.
 
+ntpeek.title=Meciuri nationale recente
+
+htLive=HT Live
+
 foxtrick.onpagepreferences=Setari FoxTrick pe pagina curenta
 foxtrick.modules_allpages=Module care functioneaza pe toate paginile
 HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
-Screenshot=Screenshot cu comentarii ale optiunilor modulelor
+NewOrChangedModules=Urmatoarele module sunt noi sau au fost schimbate de la
+Screenshot=Imagine captura cu comentarii ale optiunilor modulelor
+PreferenceScreenshot=Imagine captura cu comentarii ale preferintelor FoxTrick
+FoxtrickFirstRunScreenshotList=Lista completa a capturilor comentate (Engleza):
+FoxtrickChangeLogHint=Duceti cursorul pe iconita '!' pentru a vedea ultimele modificari (Engleza).
+FoxtrickFirstRunSetChanged=Setari preferinte ale modulelor noi acum
 #  NOTE TO TRANSLATORS
-# You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all relesase
+# You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all relesases
+FoxtrickFirstRunReleaseNotes=Note ale lansarii (Engleza):
+FoxtrickFirstRunReleaseNotesLink=http://www.ht-foxtrick.com/forum/viewforum.php?f=7
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
-
+FoxtrickFirstRunHelpPage=Forum ajutor FoxTrick (Engleza, Germana, Spaniola, Italiana):
+FoxtrickFirstRunHelpPageLink=/Forum/Read.aspx?t=13254684
 
 StyleTutorial.title=Styling FoxTrick
 StyleTutorial.content=FoxTrick oferta un set de inferfete de prezentare pentru useri pentru a-si personaliza stilurile proprii.\n Aceste interfete sunt oferite prin intermediul claselor si idurilor HTML si ai putea utiliza CSS pentru a defini stilul preferat.\n Un exemplu de stil poate fi gasit la %s si poate fi modificat pentru a-ti satisface nevoile.\n Dupa salvarea fisierului poti utiliza modulul SkinPlugin pentru a incarca fisierul CSS pentru ca stilul sa aiba efect.
